--- a/CSS/Estilo.css
+++ b/CSS/Estilo.css
@@ -8,9 +8,9 @@ body {
 }
 
 #cabecera {
-  background: green;
+  background: blue;
   box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
-  color: white;
+  color: yellow;
   font-weight: bold;
   margin: 0;
   padding: 0.5em;
