--- a/CSS/Estilo.css
+++ b/CSS/Estilo.css
@@ -1,5 +1,5 @@
 body {
-  color: blueviolet;
+  color: red;
   text-align: center;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
@@ -11,7 +11,7 @@ body {
 #cabecera {
   background: antiquewhite;
   box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
-  color: black;
+  color: blueviolet;
   font-weight: bold;
   margin: 0;
   padding: 0.5em;
