--- a/CSS/Estilo.css
+++ b/CSS/Estilo.css
@@ -1,15 +1,14 @@
 body {
-  color: red;
+  color: black;
   text-align: center;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  font-size: 16px;
+  font-family: "Times New Roman", Times, serif;
+  font-size: 18px;
   margin: 0;
   padding: 0;
 }
 
 #cabecera {
-  background: antiquewhite;
+  background: whitesmoke;
   box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
   color: blueviolet;
   font-weight: bold;
@@ -32,5 +31,5 @@ body {
 }
 
 #container h1 {
-  font-size: 20px;
+  font-size: 25px;
 }
