--- a/CSS/Estilo.css
+++ b/CSS/Estilo.css
@@ -1,19 +1,25 @@
 body {
-  color: black;
+  background: #1e1f24;
+  color: #333;
   text-align: center;
-  font-family: "Times New Roman", Times, serif;
-  font-size: 18px;
+  font-family: Arial;
+  font-size: 16px;
   margin: 0;
   padding: 0;
 }
 
 #cabecera {
-  background: whitesmoke;
+  background: #37488b;
   box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
-  color: blueviolet;
+  color: white;
   font-weight: bold;
   margin: 0;
   padding: 0.5em;
+}
+
+#cabecera #logo {
+  width: 20px;
+  vertical-align: middle;
 }
 
 #cabecera #tagline {
@@ -31,5 +37,9 @@ body {
 }
 
 #container h1 {
-  font-size: 25px;
+  font-size: 20px;
+}
+#post {
+  background: white;
+  padding: 1em;
 }
